--- a/Codebase/UnipeiApp/Pages/Registe/UNPRegistedUpLoadPicCell.xib
+++ b/Codebase/UnipeiApp/Pages/Registe/UNPRegistedUpLoadPicCell.xib
@@ -78,10 +78,21 @@
                         <color key="textColor" red="0.25366950760000001" green="0.25366950760000001" blue="0.25366950760000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NaZ-ZU-sHb">
+                        <rect key="frame" x="0.0" y="98" width="320" height="1"/>
+                        <color key="backgroundColor" red="0.69823232323232332" green="0.69823232323232332" blue="0.69823232323232332" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="rcE-rN-GQu"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.20142834595959591" green="0.20142834595959591" blue="0.20142834595959591" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Zm3-aM-VIq" firstAttribute="centerY" secondItem="3KX-eY-oGG" secondAttribute="centerY" id="1jV-yT-wcU"/>
                     <constraint firstItem="abe-aZ-1X4" firstAttribute="centerY" secondItem="Zm3-aM-VIq" secondAttribute="centerY" id="66O-Qd-wDY"/>
+                    <constraint firstAttribute="trailing" secondItem="NaZ-ZU-sHb" secondAttribute="trailing" id="DDG-65-Au1"/>
                     <constraint firstAttribute="trailing" secondItem="bJN-Ea-x72" secondAttribute="trailing" constant="8" id="DlV-1f-76I"/>
                     <constraint firstItem="rIo-l9-3A4" firstAttribute="leading" secondItem="jye-6o-bTg" secondAttribute="trailing" constant="4" id="HIO-5b-4jc"/>
                     <constraint firstItem="jye-6o-bTg" firstAttribute="centerY" secondItem="ivm-ye-qzp" secondAttribute="centerY" id="Hfy-gL-z5G"/>
@@ -89,12 +100,14 @@
                     <constraint firstItem="3KX-eY-oGG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="KoO-TN-Pzo"/>
                     <constraint firstItem="Mkh-o3-Kra" firstAttribute="centerY" secondItem="rIo-l9-3A4" secondAttribute="centerY" id="O6J-9v-zZY"/>
                     <constraint firstAttribute="bottom" secondItem="bJN-Ea-x72" secondAttribute="bottom" constant="8" id="R5x-QB-2rJ"/>
+                    <constraint firstAttribute="bottom" secondItem="NaZ-ZU-sHb" secondAttribute="bottom" id="UE6-2B-dj6"/>
                     <constraint firstItem="ivm-ye-qzp" firstAttribute="leading" secondItem="abe-aZ-1X4" secondAttribute="trailing" constant="4" id="biB-HW-APq"/>
                     <constraint firstItem="ivm-ye-qzp" firstAttribute="centerY" secondItem="abe-aZ-1X4" secondAttribute="centerY" id="dFz-aq-mK3"/>
                     <constraint firstItem="bJN-Ea-x72" firstAttribute="top" secondItem="Zm3-aM-VIq" secondAttribute="bottom" constant="6" id="egr-ca-dKr"/>
                     <constraint firstItem="Zm3-aM-VIq" firstAttribute="leading" secondItem="3KX-eY-oGG" secondAttribute="trailing" id="f3r-5Z-wTx"/>
                     <constraint firstItem="jye-6o-bTg" firstAttribute="leading" secondItem="ivm-ye-qzp" secondAttribute="trailing" constant="4" id="f72-Dy-eOl"/>
                     <constraint firstItem="Mkh-o3-Kra" firstAttribute="leading" secondItem="rIo-l9-3A4" secondAttribute="trailing" constant="4" id="g6p-JE-IYG"/>
+                    <constraint firstItem="NaZ-ZU-sHb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="h7j-IC-UDK"/>
                     <constraint firstItem="bJN-Ea-x72" firstAttribute="leading" secondItem="Zm3-aM-VIq" secondAttribute="leading" id="hXx-vQ-wk2"/>
                     <constraint firstItem="3KX-eY-oGG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="ltl-fy-oaP"/>
                     <constraint firstItem="rIo-l9-3A4" firstAttribute="centerY" secondItem="jye-6o-bTg" secondAttribute="centerY" id="ueK-aY-LeO"/>
