--- a/Codebase/UnipeiApp/Unipei_4S.storyboard
+++ b/Codebase/UnipeiApp/Unipei_4S.storyboard
@@ -163,11 +163,11 @@
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="74" id="WGN-FE-yIs">
                                         <rect key="frame" x="0.0" y="559" width="375" height="74"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WGN-FE-yIs" id="fu6-8A-3JW">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="WGN-FE-yIs" id="fu6-8A-3JW">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="73"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" placeholderIntrinsicWidth="343" placeholderIntrinsicHeight="44" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jp0-2J-glM" userLabel="btnSubmit" customClass="JPSubmitButton">
+                                                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" ambiguous="YES" placeholderIntrinsicWidth="343" placeholderIntrinsicHeight="44" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jp0-2J-glM" userLabel="btnSubmit" customClass="JPSubmitButton">
                                                     <rect key="frame" x="16" y="8" width="343" height="44"/>
                                                     <color key="backgroundColor" red="1" green="0.56058343614271999" blue="0.4681592512954208" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
