--- a/Codebase/UnipeiApp/Unipei_User.storyboard
+++ b/Codebase/UnipeiApp/Unipei_User.storyboard
@@ -65,6 +65,149 @@
             </objects>
             <point key="canvasLocation" x="537.5" y="408.5"/>
         </scene>
+        <!--Change Init PwdVC-->
+        <scene sceneID="gB9-ca-Ucf">
+            <objects>
+                <tableViewController storyboardIdentifier="UNPChangeInitPwdVC" id="6CO-ab-cE1" customClass="UNPChangeInitPwdVC" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="NrF-9l-t4o">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <sections>
+                            <tableViewSection id="hKe-j1-dur">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="44" id="Cb6-7r-nLY" customClass="JPLinedTableCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Cb6-7r-nLY" id="muD-OZ-zK7">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" placeholderIntrinsicWidth="343" placeholderIntrinsicHeight="44" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入原密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ely-cD-Z44">
+                                                    <rect key="frame" x="16" y="0.0" width="343" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="bjO-Z4-Vyt"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="ely-cD-Z44" secondAttribute="trailing" constant="16" id="QCF-El-9Yg"/>
+                                                <constraint firstAttribute="bottom" secondItem="ely-cD-Z44" secondAttribute="bottom" id="V20-vm-gOL"/>
+                                                <constraint firstItem="ely-cD-Z44" firstAttribute="leading" secondItem="muD-OZ-zK7" secondAttribute="leading" constant="16" id="c26-9s-HRC"/>
+                                                <constraint firstItem="ely-cD-Z44" firstAttribute="top" secondItem="muD-OZ-zK7" secondAttribute="top" id="hWe-s6-KjO"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="44" id="lJu-SB-3N7" customClass="JPLinedTableCell">
+                                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lJu-SB-3N7" id="fyF-VV-SN8">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入新密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EvK-sH-A4e">
+                                                    <rect key="frame" x="16" y="0.0" width="343" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="UxG-lC-nDu"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="EvK-sH-A4e" secondAttribute="trailing" constant="16" id="HjH-ZF-gOD"/>
+                                                <constraint firstItem="EvK-sH-A4e" firstAttribute="top" secondItem="fyF-VV-SN8" secondAttribute="top" id="aNz-t7-eeX"/>
+                                                <constraint firstAttribute="bottom" secondItem="EvK-sH-A4e" secondAttribute="bottom" id="gmL-P7-w5W"/>
+                                                <constraint firstItem="EvK-sH-A4e" firstAttribute="leading" secondItem="fyF-VV-SN8" secondAttribute="leading" constant="16" id="hBx-ip-5X1"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="44" id="0dT-ck-nGX" customClass="JPLinedTableCell">
+                                        <rect key="frame" x="0.0" y="88" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0dT-ck-nGX" id="Rkr-yu-TNE">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请重复新密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="35S-3P-MNv">
+                                                    <rect key="frame" x="16" y="0.0" width="343" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="Mqe-U7-y0L"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="35S-3P-MNv" firstAttribute="leading" secondItem="Rkr-yu-TNE" secondAttribute="leading" constant="16" id="MFs-Y9-X89"/>
+                                                <constraint firstAttribute="trailing" secondItem="35S-3P-MNv" secondAttribute="trailing" constant="16" id="OWH-Pm-1xb"/>
+                                                <constraint firstAttribute="bottom" secondItem="35S-3P-MNv" secondAttribute="bottom" id="Zmf-46-sZq"/>
+                                                <constraint firstItem="35S-3P-MNv" firstAttribute="top" secondItem="Rkr-yu-TNE" secondAttribute="top" id="nPC-Zf-K6Q"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="83" id="c08-xQ-LXq">
+                                        <rect key="frame" x="0.0" y="132" width="375" height="83"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="c08-xQ-LXq" id="3FO-Oj-n1u">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="83"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2WS-XX-xTG" customClass="JPSubmitButton">
+                                                    <rect key="frame" x="16" y="25" width="343" height="44"/>
+                                                    <color key="backgroundColor" red="0.98378314393939392" green="0.98378314393939392" blue="0.98378314393939392" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="hs5-ss-oMI"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <state key="normal" title="下一步">
+                                                        <color key="titleColor" red="0.28965435606060608" green="0.28965435606060608" blue="0.28965435606060608" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="最少6个字符，可由英文、数字组成" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3R-nr-bQO">
+                                                    <rect key="frame" x="16" y="8" width="343" height="9"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54000000000000004" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="o3R-nr-bQO" secondAttribute="trailing" constant="16" id="275-Dt-FMu"/>
+                                                <constraint firstItem="o3R-nr-bQO" firstAttribute="leading" secondItem="3FO-Oj-n1u" secondAttribute="leading" constant="16" id="7xW-BO-zbY"/>
+                                                <constraint firstItem="o3R-nr-bQO" firstAttribute="top" secondItem="3FO-Oj-n1u" secondAttribute="top" constant="8" id="AQ3-MY-gB2"/>
+                                                <constraint firstItem="2WS-XX-xTG" firstAttribute="leading" secondItem="3FO-Oj-n1u" secondAttribute="leading" constant="16" id="XZu-g4-gq0"/>
+                                                <constraint firstAttribute="bottom" secondItem="2WS-XX-xTG" secondAttribute="bottom" constant="14" id="hxv-mj-Hdj"/>
+                                                <constraint firstItem="2WS-XX-xTG" firstAttribute="top" secondItem="o3R-nr-bQO" secondAttribute="bottom" constant="8" id="pWH-Hd-gcY"/>
+                                                <constraint firstAttribute="trailing" secondItem="2WS-XX-xTG" secondAttribute="trailing" constant="16" id="zRh-R5-Kr3"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="6CO-ab-cE1" id="tk5-71-aQ2"/>
+                            <outlet property="delegate" destination="6CO-ab-cE1" id="T2U-hX-PZb"/>
+                        </connections>
+                    </tableView>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="btnNext" destination="2WS-XX-xTG" id="neC-Oo-ZZs"/>
+                        <outlet property="tfPwdNew" destination="EvK-sH-A4e" id="aQV-gh-XOw"/>
+                        <outlet property="tfPwdNewComf" destination="35S-3P-MNv" id="24k-y2-1Da"/>
+                        <outlet property="tfPwdOld" destination="ely-cD-Z44" id="umn-Lr-BBe"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x0y-jS-kbM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1036.5" y="408.5"/>
+        </scene>
     </scenes>
     <resources>
         <image name="icon_checked_small" width="18" height="18"/>
